--- a/manifest.json
+++ b/manifest.json
@@ -546,12 +546,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/access-ud-directories.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/access-ud-directories.html",
-          "hash": "pFd+I4kshjkXL7C6ssgRcA=="
+          "hash": "uFZ+5elnFGjvKzb9b+hxrQ=="
         }
       },
       "is_incremental": false,
@@ -4026,17 +4029,6 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/sftp_4.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/sftp_4.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
       "source_relative_path": "home/techguides/images/sftp_5.png",
       "output": {
         "resource": {
@@ -4795,12 +4787,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/troubleshooting.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/troubleshooting.html",
-          "hash": "5jzM5IfU3RbbI+Ism/yBww=="
+          "hash": "HIt771RFHvo+WNmO3sqWKw=="
         }
       },
       "is_incremental": false,
