--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -101,6 +101,8 @@
      items:
        - name: Extend Troubleshooting
          href: ./techguides/troubleshooting.md
+       - name: DB Conversion Instructions 
+         href: ./techguides/tafj-db-setup.md
    - name: Assemble
      items:
        - name: Fix Issues at Factory Run
