--- a/manifest.json
+++ b/manifest.json
@@ -2827,6 +2827,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-admin.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-admin.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/jenkins-build-build.png",
       "output": {
         "resource": {
@@ -2937,6 +2948,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-dashboard1.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-dashboard1.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/jenkins-build-environment-fields.png",
       "output": {
         "resource": {
@@ -2952,6 +2974,28 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/jenkins-build-environment-id.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-environmentid.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-environmentid.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-environments.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-environments.png"
         }
       },
       "is_incremental": false,
@@ -3058,10 +3102,32 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-pipeline1.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-pipeline1.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/jenkins-build-portal-login.png",
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/jenkins-build-portal-login.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-project.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-project.png"
         }
       },
       "is_incremental": false,
@@ -3249,6 +3315,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/jenkins-build-user-id.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-users-credentials.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-users-credentials.png"
         }
       },
       "is_incremental": false,
@@ -4746,7 +4823,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/jenkins-build-promote-pipelines.html",
-          "hash": "leHVPfZX5njP0UEhjHHOKg=="
+          "hash": "M8nDOlHr7nEqv270etV7Iw=="
         }
       },
       "is_incremental": false,
