--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "C:/Jenkins/jobs/DocumentationPortal-Build/workspace/docfx_project",
+  "source_base_path": "D:/DocumentationPortal/temenos-platform-documentation/docfx_project",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -417,6 +417,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/jenkins-build-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/jenkins-build-video.html",
+          "hash": "GzcVCXK5SeUicm47bwDqWA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/manage-artifactory-test-cycle-video.md",
       "output": {
         ".html": {
@@ -537,7 +549,7 @@
       "output": {
         ".html": {
           "relative_path": "home/setup-streams-video.html",
-          "hash": "9jQI2gpU+VwPZqyUW4ssUQ=="
+          "hash": "UYceJXwyP29Durf7myPcow=="
         }
       },
       "is_incremental": false,
@@ -5022,7 +5034,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/troubleshooting.html",
-          "hash": "CsjwjqWWNec4p02n32Fzzw=="
+          "hash": "n54cVLKmssQMxsobAsf0zQ=="
         }
       },
       "is_incremental": false,
@@ -5089,15 +5101,12 @@
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
       "type": "Toc",
       "source_relative_path": "home/toc.yml",
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "ilf9MZeX3DGvRzqw3AJb4w=="
+          "hash": "iUPYMq5spEt1qNoBR/50yQ=="
         }
       },
       "is_incremental": false,
@@ -5212,8 +5221,7 @@
   "incremental_info": [
     {
       "status": {
-        "can_incremental": false,
-        "details": "Cannot build incrementally because last build info is missing.",
+        "can_incremental": true,
         "incrementalPhase": "build"
       },
       "processors": {
@@ -5222,22 +5230,22 @@
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "RestApiDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
-        "ConceptualDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ManagedReferenceDocumentProcessor": {
+        "ConceptualDocumentProcessor": {
+          "can_incremental": true,
+          "incrementalPhase": "build"
+        },
+        "RestApiDocumentProcessor": {
           "can_incremental": false,
+          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": true,
           "incrementalPhase": "build"
         }
       }
