--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "D:/DocumentationPortal/temenos-platform-documentation/docfx_project",
+  "source_base_path": "C:/Jenkins/jobs/DocumentationPortal-Build/workspace/docfx_project",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -102,7 +102,7 @@
       "output": {
         ".html": {
           "relative_path": "home/cloud-environments-customize-templates.html",
-          "hash": "4J4unGtKRsCXMyEOfh4D+w=="
+          "hash": "D5hPgbrwDIrj2qsoh70TjA=="
         }
       },
       "is_incremental": false,
@@ -537,7 +537,7 @@
       "output": {
         ".html": {
           "relative_path": "home/setup-streams-video.html",
-          "hash": "Df2hjHrcNBKUEBmXdm4cWw=="
+          "hash": "ImsBFkEZFXGOrR44sRNhAg=="
         }
       },
       "is_incremental": false,
@@ -5022,7 +5022,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/troubleshooting.html",
-          "hash": "n54cVLKmssQMxsobAsf0zQ=="
+          "hash": "CsjwjqWWNec4p02n32Fzzw=="
         }
       },
       "is_incremental": false,
@@ -5109,7 +5109,7 @@
       "output": {
         ".html": {
           "relative_path": "home/tutorials-assemble.html",
-          "hash": "39hYd/XnBO3QFD+rPIq+Jw=="
+          "hash": "kJBTzPDQytaL+Jrj3RjTPQ=="
         }
       },
       "is_incremental": false,
@@ -5212,31 +5212,32 @@
   "incremental_info": [
     {
       "status": {
-        "can_incremental": true,
+        "can_incremental": false,
+        "details": "Cannot build incrementally because last build info is missing.",
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ManagedReferenceDocumentProcessor": {
-          "can_incremental": true,
-          "incrementalPhase": "build"
-        },
-        "ConceptualDocumentProcessor": {
-          "can_incremental": true,
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ConceptualDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": false,
           "incrementalPhase": "build"
         }
       }
